# local-talking-llm

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt  stt.py  test.py  tts.py
core/common/: const.py
core/llm/: model.py  nitro.py
core/memory/: function.py  schema.py
core/stt/: base.py  model.py  oai_whisper.py
core/tts/: base.py
core/tts/encodec.cpp/: CMakeLists.txt  convert.py  encodec.cpp  encodec.h
interface/console/: main.py
test/: benchmark_bark.py
